[package]
name = "elux"
version = "1.0.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"], default-features = false }
futures = "0.3.28"
anyhow = "1.0.98"
dirs = "6.0.0"
eyre = "0.6.12"
clap = { version = "4.5.41", features = ["derive"] }
reqwest = { version = "0.12.22", features = [
    "rustls-tls",
], default-features = false }
base64 = "0.22.1"
rand = "0.9.1"
url = { version = "2.5.4", features = ["serde"] }
axum = { version = "0.8.4", features = ["macros", "ws"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tower = "0.5.2"
thiserror = "1.0"
notify = "8.2.0"
mimalloc = "0.1.48"
rusqlite = { version = "0.37.0", features = ["url"] }
percent-encoding = "2.3.2"
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
tokio-stream = { version = "0.1.17", default-features = true, features = ["full"] }
mime_guess = "2.0.5"
rust-embed = "8.9.0"

[dev-dependencies]
tempfile = "3.8"
